1,兼容性修复