@@ -3,8 +3,8 @@ package iouring;
 import top.dreamlike.async.file.AsyncFile;
 import top.dreamlike.eventloop.IOUringEventLoop;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -24,14 +24,14 @@ public class FileOpExample {
 
 
         Integer integer = write.get();
-        System.out.println("async write res:"+integer);
+        System.out.println("async write res:" + integer);
         AsyncFile readFile = ioUringEventLoop.openFile("demo.txt", O_RDONLY());
-        try (MemorySession memorySession = MemorySession.openShared()) {
-            MemorySegment memorySegment = memorySession.allocate(1024);
+        try (Arena arena = Arena.openShared()) {
+            MemorySegment memorySegment = arena.allocate(1024);
             CompletableFuture<Integer> read = readFile.readUnsafe(0, memorySegment);
             Integer length = read.get();
             byte[] res = memorySegment.asSlice(0, length).toArray(ValueLayout.JAVA_BYTE);
-            System.out.println("read all :"+new String(res));
+            System.out.println("read all :" + new String(res));
         }
 
         ioUringEventLoop.shutdown();
