@@ -5,8 +5,8 @@ import top.dreamlike.helper.NativeHelper;
 import top.dreamlike.helper.Unsafe;
 import top.dreamlike.nativeLib.unistd.unistd_h;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 
 import static java.lang.foreign.ValueLayout.JAVA_LONG;
 
@@ -38,7 +38,7 @@ public class EventFd implements AutoCloseable {
     }
 
     public long readSync() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena session = Arena.openConfined()) {
             MemorySegment tmp = session.allocate(JAVA_LONG, 0);
             readSyncUnsafe(tmp);
             return tmp.get(JAVA_LONG, 0);
