@@ -20,24 +20,38 @@ public class __pthread_internal_slist {
     public static VarHandle __next$VH() {
         return __pthread_internal_slist.__next$VH;
     }
-    public static MemoryAddress __next$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress)__pthread_internal_slist.__next$VH.get(seg);
+
+    public static MemorySegment __next$get(MemorySegment seg) {
+        return (java.lang.foreign.MemorySegment) __pthread_internal_slist.__next$VH.get(seg);
     }
-    public static void __next$set( MemorySegment seg, MemoryAddress x) {
+
+    public static void __next$set(MemorySegment seg, MemorySegment x) {
         __pthread_internal_slist.__next$VH.set(seg, x);
     }
-    public static MemoryAddress __next$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)__pthread_internal_slist.__next$VH.get(seg.asSlice(index*sizeof()));
+
+    public static MemorySegment __next$get(MemorySegment seg, long index) {
+        return (java.lang.foreign.MemorySegment) __pthread_internal_slist.__next$VH.get(seg.asSlice(index * sizeof()));
     }
-    public static void __next$set(MemorySegment seg, long index, MemoryAddress x) {
-        __pthread_internal_slist.__next$VH.set(seg.asSlice(index*sizeof()), x);
+
+    public static void __next$set(MemorySegment seg, long index, MemorySegment x) {
+        __pthread_internal_slist.__next$VH.set(seg.asSlice(index * sizeof()), x);
     }
-    public static long sizeof() { return $LAYOUT().byteSize(); }
-    public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
+
+    public static long sizeof() {
+        return $LAYOUT().byteSize();
+    }
+
+    public static MemorySegment allocate(SegmentAllocator allocator) {
+        return allocator.allocate($LAYOUT());
+    }
+
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+    public static MemorySegment ofAddress(MemorySegment addr, Arena session) {
+        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session);
+    }
 }
 
 
