@@ -30,7 +30,7 @@ public class __sigset_t {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
 
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) {
+    public static MemorySegment ofAddress(MemorySegment addr, Arena session) {
         return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session);
     }
 }
